--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Index of /~ng</title>
+        <style>
+            @import url("/css/style");
+        </style>
+
     </head>
 
         <!-------------------------------------------->
