--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <div class="pasek"></div>
         <!-------------------------------------------->
         <div class="main">
-            <button type="button" value=""></button>
+   
+            <a href="4P/"> <button type="button" value="4P">4P</button> </a>
+            <a href="5G/"> <button type="button" value="5G">5G</button> </a>
+            <a href="5P/"> <button type="button" value="5P">5P</button> </a>
+            <a href="5K/"> <button type="button" value="5K">5K</button> </a>
+            
         </div>
     </body>
 </html>
