--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
 
     </head>
 
-        <!-------------------------------------------->ds
+        <!-------------------------------------------->
 
     <body>
         <div class="header">
             <a href="/"><img src="home_button.png" alt="Home"></a>
         </div>
         <!-------------------------------------------->
-        <div class="pasek"></div>
+        <div class="pasek">
+            <a href="/"><img src="plan_button.png" alt="Plan"></a>
+        </div>
         <!-------------------------------------------->
         <div class="main">
    
             <a href="4P/"> <button type="button" value="4P">4P</button> </a> <br>
-            <a href="5G/"> <button type="button" value="5G">5G</button> </a>
-            <a href="5P/"> <button type="button" value="5P">5P</button> </a>
-            <a href="5K/"> <button type="button" value="5K">5K</button> </a>
+            <a href="5G/"> <button type="button" value="5G">5G</button> </a> <br>
+            <a href="5P/"> <button type="button" value="5P">5P</button> </a> <br>
+            <a href="5K/"> <button type="button" value="5K">5K</button> </a> <br>
+
+            <p>
+                LOREM IPSUM LOREM IPSUMLOREM IPSUMLOREM IPSUMLOREM IPSUMLOREM IPSUM
+            </p>
 
         </div>
     </body>
