--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <!-------------------------------------------->
         <div class="pasek">
-            <a href="/"><img src="plan_button.png" alt="Plan"></a>
+            <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img src="plan_button.png" alt="Plan"></a>
         </div>
         <!-------------------------------------------->
         <div class="main">
