--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="5K/"> <button type="button" value="5K">5K</button> </a> <br>
 
             <p>
-                LOREM IPSUM LOREM IPSUMLOREM IPSUMLOREM IPSUMLOREM IPSUMLOREM IPSUM
+                LOREM IPSUM LOREM IPSUMLOREM IPSUMLOREM IPSUMLOREM 
             </p>
 
         </div>
