--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <body>
         <div class="header">
             <a href="/"><img src="home_button.png" alt="Home"></a>
+
         </div>
         <!-------------------------------------------->
         <div class="pasek">
+            
             <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img src="plan_button.png" alt="Plan"></a>
         </div>
         <!-------------------------------------------->
         <div class="main">
-   
-            <a href="4P/"> <button type="button" value="4P">4P</button> </a> <br>
-            <a href="5G/"> <button type="button" value="5G">5G</button> </a> <br>
-            <a href="5P/"> <button type="button" value="5P">5P</button> </a> <br>
-            <a href="5K/"> <button type="button" value="5K">5K</button> </a> <br>
-            
+
+            <a href="klasy_5/"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 5</button> </a> <br>
+            <a href="klasy_5/"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 4</button> </a> <br>
+
         </div>
     </body>
 </html>
