--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class="header">
             <a href="/"><img src="home_button.png" alt="Home"></a>
 
+            <h1>FTP Mikołaja Nogi</h1>
+
         </div>
         <!-------------------------------------------->
         <div class="pasek">
