--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="header">
             <a href="/"><img src="home_button.png" alt="Home"></a>
 
-            <h1>FTP Mikołaja Nogi</h1>
+            <h1 class="tytul">FTP Mikołaja Nogi</h1>
+
+            <b class="sciezka">/~ng/</b>
 
         </div>
         <!-------------------------------------------->
