--- a/pdstr/klasa4.html
+++ b/pdstr/klasa4.html
@@ -13,6 +13,8 @@
     <div class="header">
         <a href="/"><img src="home_button.png" alt="Home"></a>
 
+        <h1>Klasy 4</h1>
+
     </div>
     <!-------------------------------------------->
     <div class="pasek">
