--- a/pdstr/klasa4.html
+++ b/pdstr/klasa4.html
@@ -24,9 +24,9 @@
     <!-------------------------------------------->
     <div class="main">
 
-        <a href="4G"> <button class="wyb_postaci" type="button" value="4g">4G</button> </a> <br>
-        <a href="4K"> <button class="wyb_postaci" type="button" value="4k">4K</button> </a> <br>
-        <a href="4P"> <button class="wyb_postaci" type="button" value="4p">4P</button> </a> <br>
+        <a href="4G/"> <button class="wyb_postaci" type="button" value="4g">4G</button> </a> <br>
+        <a href="4K/"> <button class="wyb_postaci" type="button" value="4k">4K</button> </a> <br>
+        <a href="4P/"> <button class="wyb_postaci" type="button" value="4p">4P</button> </a> <br>
 
     </div>
     
