--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             <a href="klasy_5/"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 5</button> </a> <br>
             <a href="klasy_5/"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 4</button> </a> <br>
+            <a href="klasy_5/"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 3</button> </a> <br>  
 
         </div>
     </body>
