--- a/pdstr/klasa4.html
+++ b/pdstr/klasa4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index of /~ng/klasy_4</title>
     <style>
-        @import url("css/style.css");
+        @import url("../css/style.css");
     </style>
 </head>
 <body>
