--- a/pdstr/klasa5.html
+++ b/pdstr/klasa5.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index of /~ng/klasy_5</title>
-    <style>
-        @import url("../css/style.css");
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
