--- a/pdstr/klasa5.html
+++ b/pdstr/klasa5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index of /~ng/klasy_5</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
     <!-------------------------------------------->
     <div class="main">
 
-        <a href="5G/"> <button class="wyb_postaci" type="button" value="5g">5G</button> </a> <br>
+        <a href="pdstr_dwa/5G.html"> <button class="wyb_postaci" type="button" value="5g">5G</button> </a> <br>
         <a href="5K/"> <button class="wyb_postaci" type="button" value="5k">5K</button> </a> <br>
         <a href="5P/"> <button class="wyb_postaci" type="button" value="5p">5P</button> </a> <br>
 
