--- a/pdstr/klasa4.html
+++ b/pdstr/klasa4.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="header">
-        <a href="/"><img src="home_button.png" alt="Home"></a>
+        <a href="../index.html"><img src="home_button.png" alt="Home"></a>
 
         <h1>Klasy 4</h1>
 
