--- a/pdstr/pdstr_dwa/5G.html
+++ b/pdstr/pdstr_dwa/5G.html
@@ -12,6 +12,8 @@
 
     <div class="header">
         <a href="/"><img src="home_button.png" alt="Home"></a>
+        <input type="search" id="wyszukiwarka" name="wysz">
+        <button>Wyszukaj</button>
     </div>
     <!-------------------------------------------->
     <div class="pasek">
