--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
-    <div class="header">
+    <div class="przycisk">
         <a href="../../index.html"><img src="home_button.png" alt="Home"></a>
+    </div>
+    <!-------------------------------------------->
+
+    <div class="header">
+
         <input type="search" id="wyszukiwarka" name="wysz">
         <button>Wyszukaj</button>
     </div>
