--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
         <!-------------------------------------------->
 
     <body>
-        <div class="header">
-            <a href="/"><img src="home_button.png" alt="Home"></a>
 
+        <div class="przycisk">
+            
+            <a href="/"><img src="home_button.png" alt="Home"></a>
+        </div>
+
+        <!-------------------------------------------->
+
+        <div class="header">
+            
             <h1 class="tytul">FTP Mikołaja Nogi</h1>
 
             <b class="sciezka">/~ng/</b>
