--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -7,19 +7,30 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+    <div class="przycisk">
+            
+        <a href="/"><img src="home_button.png" alt="Home"></a>
+    </div>
+
+    <!-------------------------------------------->
 
     <div class="header">
-        <a href="../index.html"><img src="home_button.png" alt="Home"></a>
 
         <h1>Klasy 4</h1>
 
+        <input type="search" id="wyszukiwarka" name="wysz">
+        <button>Wyszukaj</button>
     </div>
+
     <!-------------------------------------------->
+
     <div class="pasek">
         
         <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img src="plan_button.png" alt="Plan"></a>
     </div>
+
     <!-------------------------------------------->
+
     <div class="main">
 
         <a href="4G/"> <button class="wyb_postaci" type="button" value="4g">4G</button> </a> <br>
