--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index of /~ng/klasy_5/5G</title>
     <link rel="stylesheet" type="text/css" href="../../css/style.css">
 </head>
+
 <body>
 
     <div class="przycisk">
@@ -20,8 +22,9 @@
     </div>
     <!-------------------------------------------->
     <div class="pasek">
-        
-        <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img src="plan_button.png" alt="Plan"></a>
+
+        <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
+                src="plan_button.png" alt="Plan"></a>
     </div>
     <!-------------------------------------------->
     <div class="main">
@@ -29,6 +32,7 @@
         <!-- Tutaj będą linki do plików -->
 
     </div>
-    
+
 </body>
+
 </html>
