--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -19,7 +19,7 @@
 
         <h1>Klasy 5</h1>
 
-        <input type="search" id="wyszukiwarka" name="wysz">
+        <input type="search" id="wyszukiwarka" name="wysz" placeholder="Szukaj">
         <button>Wyszukaj</button>
     </div>
     
