--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -15,7 +15,7 @@
 
     <div class="header">
 
-        <input type="search" id="wyszukiwarka" name="wysz">
+        <input type="search" id="wyszukiwarka" name="wysz" placeholder="Szukaj">
         <button>Wyszukaj</button>
     </div>
     <!-------------------------------------------->
