--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-------------------------------------------->
     <div class="main">
 
-        <a href="pdstr/klasa5.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 5</button> </a> <br>
-        <a href="pdstr/klasa4.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 4</button> </a> <br>
-        <a href="pdstr/klasa3.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 3</button> </a> <br>
+        <a href="klasy/klasa5.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 5</button> </a> <br>
+        <a href="klasy/klasa4.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 4</button> </a> <br>
+        <a href="klasy/klasa3.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 3</button> </a> <br>
 
     </div>
 </body>
