--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -37,7 +37,7 @@
 
     <div class="main">
 
-        <a href="pdstr_dwa/5G.html"> <button class="wyb_postaci" type="button" value="5g">5G</button> </a> <br>
+        <a href="rodzaj/5G.html"> <button class="wyb_postaci" type="button" value="5g">5G</button> </a> <br>
         <a href="5K/"> <button class="wyb_postaci" type="button" value="5k">5K</button> </a> <br>
         <a href="5P/"> <button class="wyb_postaci" type="button" value="5p">5P</button> </a> <br>
 
