--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -12,7 +12,7 @@
 
     <div class="przycisk">
 
-        <a href="/"><img src="home_button.png" alt="Home"></a>
+        <a href="../index.html"><img src="home_button.png" alt="Home"></a>
     </div>
 
     <!-------------------------------------------->
