--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
     <!-------------------------------------------->
     <div class="main">
 
-        <a href="klasy/klasa5.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 5</button> </a> <br>
-        <a href="klasy/klasa4.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 4</button> </a> <br>
-        <a href="klasy/klasa3.html"> <button class="wyb_teamu" type="button" value="klasy_5">Klasy 3</button> </a> <br>
+        <table class="wyb_teamu">
+            <tr>
+                <td class="parz"> <a href="klasy/klasa5.html">Klasy 5</a> </td>
+                <td class="nie-parz"> <a href="klasy/klasa4.html">Klasy 4</a> </td>
+                <td class="parz"> <a href="klasy/klasa3.html">Klasy 3</a> </td>
+            </tr>
+        </table>
 
     </div>
 </body>
