--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -37,9 +37,13 @@
 
     <div class="main">
 
-        <a href="3G/"> <button class="wyb_postaci" type="button" value="3g">3G</button> </a> <br>
-        <a href="3K/"> <button class="wyb_postaci" type="button" value="3k">3K</button> </a> <br>
-        <a href="3P/"> <button class="wyb_postaci" type="button" value="3p">3P</button> </a> <br>
+        <table class="wyb_postaci">
+            <tr>
+                <td class="parz"> <a href="rodzaj/5G.html">5G</a> </td>
+                <td class="nie-parz"> <a href="rodzaj/5K.html">5K</a> </td>
+                <td class="parz"> <a href="rodzaj/5P.html">5P</a> </td>
+            </tr>
+        </table>
 
     </div>
 
