--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -36,9 +36,13 @@
 
     <div class="main">
 
-        <a href="4G/"> <button class="wyb_postaci" type="button" value="4g">4G</button> </a> <br>
-        <a href="4K/"> <button class="wyb_postaci" type="button" value="4k">4K</button> </a> <br>
-        <a href="4P/"> <button class="wyb_postaci" type="button" value="4p">4P</button> </a> <br>
+        <table class="wyb_postaci">
+            <tr>
+                <td class="parz"> <a href="rodzaj/5G.html">5G</a> </td>
+                <td class="nie-parz"> <a href="rodzaj/5K.html">5K</a> </td>
+                <td class="parz"> <a href="rodzaj/5P.html">5P</a> </td>
+            </tr>
+        </table>
 
     </div>
 
