--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -37,9 +37,13 @@
 
     <div class="main">
 
-        <a href="rodzaj/5G.html"> <button class="wyb_postaci" type="button" value="5g">5G</button> </a> <br>
-        <a href="5K/"> <button class="wyb_postaci" type="button" value="5k">5K</button> </a> <br>
-        <a href="5P/"> <button class="wyb_postaci" type="button" value="5p">5P</button> </a> <br>
+        <table class="wyb_postaci">
+            <tr>
+                <td class="parz"> <a href="rodzaj/5G.html">5G</a> </td>
+                <td class="nie-parz"> <a href="rodzaj/5K.html">5K</a> </td>
+                <td class="parz"> <a href="rodzaj/5P.html">5P</a> </td>
+            </tr>
+        </table>
 
     </div>
 
