--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -27,9 +27,22 @@
                 src="plan_button.png" alt="Plan"></a>
     </div>
     <!-------------------------------------------->
-    <div class="main">
+    <div class="main">    
 
-        <!-- Tutaj będą linki do plików -->
+            <table class="pliki">
+                
+                <tr>
+                    <td class="tytul"> Nazwa </td>
+                    <td class="tytul"> Data modyfikacji </td>
+                    <td class="tytul"> Wielkość </td>
+                </tr>
+                
+                <tr>
+                    <td class="parz">  </td>
+                    <td class="nie-parz"></td>
+                    <td class="parz"> </td>
+                </tr>
+            </table>   
 
     </div>
 
