--- a/index.html
+++ b/index.html
@@ -8,25 +8,18 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<!-------------------------------------------->
-
 <body>
 
+    <div class="header">
+        <h1>FTP Mikołaja Nogi</h1>
+        <div id="path">
+            <h3>~ng/</h3>
+        </div>
+    </div>
     <div class="przycisk">
-
         <a href="/"><img src="home_button.png" alt="Home"></a>
     </div>
 
-    <!-------------------------------------------->
-
-    <div class="header">
-
-        <h1 class="tytul">FTP Mikołaja Nogi</h1>
-
-        <b class="sciezka">/~ng/</b>
-
-    </div>
-    <!-------------------------------------------->
     <div class="pasek">
 
         <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
