--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 <body>
 
     <div class="header">
-        <h1>FTP Mikołaja Nogi</h1>
-        <div id="path">
-            <h3>~ng/</h3>
-        </div>
+        <h1>FTP Mikołaj Noga</h1><h3>~ng/</h3>
     </div>
     <div class="przycisk">
         <a href="/"><img src="home_button.png" alt="Home"></a>
