--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <div class="header">
-        <h1>FTP Mikołaj Noga</h1><h2>~ng/</h2>
+        <h1>FTP Mikołaj Noga</h1>
+        <h2>~ng/</h2>
     </div>
     <div class="przycisk">
         <a href="/"><img src="home_button.png" alt="Home"></a>
@@ -22,7 +23,7 @@
         <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
                 src="plan_button.png" alt="Plan"></a>
     </div>
-    <!-------------------------------------------->
+
     <div class="main">
 
         <table class="wyb_teamu">
