--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -39,9 +39,9 @@
 
         <table class="wyb_postaci">
             <tr>
-                <td class="parz"> <a href="rodzaj/3G.html">3G</a> </td>
-                <td class="nie-parz"> <a href="rodzaj/3K.html">3K</a> </td>
-                <td class="parz"> <a href="rodzaj/3P.html">3P</a> </td>
+                <td onclick="window.location='rodzaj/3G.html';">3G</td>
+                <td onclick="window.location='rodzaj/3G.html';">3K</td>
+                <td onclick="window.location='rodzaj/3G.html';">3P</td>
             </tr>
         </table>
 
