--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -38,9 +38,9 @@
 
         <table class="wyb_postaci">
             <tr>
-                <td class="parz"> <a href="rodzaj/4G.html">4G</a> </td>
-                <td class="nie-parz"> <a href="rodzaj/4K.html">4K</a> </td>
-                <td class="parz"> <a href="rodzaj/4P.html">4P</a> </td>
+                <td onclick="window.location='rodzaj/4G.html';">4G</td>
+                <td onclick="window.location='rodzaj/4G.html';">4K</td>
+                <td onclick="window.location='rodzaj/4G.html';">4P</td>
             </tr>
         </table>
 
