--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -39,9 +39,9 @@
 
         <table class="wyb_postaci">
             <tr>
-                <td class="parz"> <a href="rodzaj/5G.html">5G</a> </td>
-                <td class="nie-parz"> <a href="rodzaj/5K.html">5K</a> </td>
-                <td class="parz"> <a href="rodzaj/5P.html">5P</a> </td>
+                <td onclick="window.location='rodzaj/5G.html';">5G</td>
+                <td onclick="window.location='rodzaj/5K.html';">5K</td>
+                <td onclick="window.location='rodzaj/5P.html';">5P</td>
             </tr>
         </table>
 
