--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -9,30 +9,18 @@
 </head>
 
 <body>
-    <div class="przycisk">
-
-        <a href="../index.html"><img src="home_button.png" alt="Home"></a>
-    </div>
-
-    <!-------------------------------------------->
-
     <div class="header">
-
+        <a href="../index.html"><img src="../img/home.svg" alt="Home" id="home"></a>
         <h1>Klasy 4</h1>
-
-        <input type="search" id="wyszukiwarka" name="wysz" placeholder="Szukaj">
-        <button>Wyszukaj</button>
+        <input type="text" id="search" onkeyup="wyszukiwanieF()" placeholder="Search for names.."
+            title="Type in a name"> <!-- wyszukiwarka -->
+        <h2>~ng/klasy</h2>
     </div>
-
-    <!-------------------------------------------->
 
     <div class="pasek">
-
         <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
                 src="plan_button.png" alt="Plan"></a>
     </div>
-
-    <!-------------------------------------------->
 
     <div class="main">
 
