--- a/index.html
+++ b/index.html
@@ -17,21 +17,18 @@
     </div>
 
     <div class="pasek">
-
         <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
                 src="plan_button.png" alt="Plan"></a>
     </div>
 
     <div class="main">
-
         <table class="wyb_teamu">
             <tr>
-                <td class="parz"> <a href="klasy/klasa5.html">Klasy 5</a> </td>
-                <td class="nie-parz"> <a href="klasy/klasa4.html">Klasy 4</a> </td>
-                <td class="parz"> <a href="klasy/klasa3.html">Klasy 3</a> </td>
+                <td onclick="window.location='klasy/klasa3.html';">KLASY 3</td>
+                <td onclick="window.location='klasy/klasa4.html';">KLASY 4</td>
+                <td onclick="window.location='klasy/klasa5.html';">KLASY 5</td>
             </tr>
         </table>
-
     </div>
 </body>
 
