--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -37,9 +37,9 @@
                 </tr>
                 
                 <tr>
-                    <td class="nie-parz">  </td>
-                    <td class="parz"></td>
-                    <td class="nie-parz"> </td>
+                    <td class="nie-parz"> plik1.txt </td>
+                    <td class="parz"> dokument.pdf</td>
+                    <td class="nie-parz"> obraz.jpg </td>
                 </tr>
             </table>   
 
