--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -31,15 +31,15 @@
             <table class="pliki" id="t_pliki">
                 
                 <tr>
-                    <td class="tytul"> Nazwa </td>
-                    <td class="tytul"> Data modyfikacji </td>
-                    <td class="tytul"> Wielkość </td>
+                    <th class="tytul"> Nazwa </td>
+                    <th class="tytul"> Data modyfikacji </td>
+                    <th class="tytul"> Wielkość </td>
                 </tr>
                 
                 <tr>
                     <td class="nie-parz"> plik1.txt </td>
-                    <td class="parz"> dokument.pdf</td>
-                    <td class="nie-parz"> obraz.jpg </td>
+                    <td class="parz"> 12.03.2022</td>
+                    <td class="nie-parz"> 57KB </td>
                 </tr>
             </table>   
 
