--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="header">
-        <a href="/"><img src="img/home.svg" alt="Home" id="home"></a>
+        <a href="/" title="Przejdź do strony głównej"><img src="img/home.svg" alt="Home" id="home"></a>
         <h1>FTP Mikołaj Noga</h1>
         <h2>~ng/</h2>
     </div>
