--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <a href="../index.html"><img src="../img/home.svg" alt="Home" id="home"></a>
+        <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
         <h1>Klasy 4</h1>
         <input type="text" id="search" onkeyup="wyszukiwanieF()" placeholder="Search for names.."
             title="Type in a name"> <!-- wyszukiwarka -->
