--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="header">
-        <a href="../index.html"><img src="../img/home.svg" alt="Home" id="home"></a>
+        <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
         <h1>Klasy 5</h1>
         <input type="text" id="search" onkeyup="wyszukiwanieF()" placeholder="Search for names.."
             title="Type in a name"> <!-- wyszukiwarka -->
