--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -17,7 +17,7 @@
 
     <div class="header">
 
-        <input type="text" id="search" onkeyup="wyszukiwanieF()" placeholder="Search for names.." title="Type in a name"> <!-- wyszukiwarka -->
+      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"> <!-- wyszukiwarka -->
     </div>
     <!-------------------------------------------->
     <div class="pasek">
@@ -28,43 +28,66 @@
     <!-------------------------------------------->
     <div class="main">    
 
-            <table class="pliki" id="t_pliki">
-                
-                <tr>
-                    <th class="tytul"> Nazwa </td>
-                    <th class="tytul"> Data modyfikacji </td>
-                    <th class="tytul"> Wielkość </td>
-                </tr>
-                
-                <tr>
-                    <td class="nie-parz"> plik1.txt </td>
-                    <td class="parz"> 12.03.2022</td>
-                    <td class="nie-parz"> 57KB </td>
-                </tr>
-            </table>   
+      <table id="myTable">
+        <tr class="header">
+          <th>Nazwa</th>
+          <th>Data modyfikacji</th>
+          <th>Wielkość pliku</th>
+        </tr>
+        <tr>
+          <td>plik1.txt</td>
+          <td>12-09-2023</td>
+          <td>57KB</td>
+        </tr>
+        <tr>
+          <td>plik2.txt</td>
+          <td>12-09-2023</td>
+          <td>57KB</td>
+        </tr>
+        <tr>
+          <td>plik3.txt</td>
+          <td>12-09-2023</td>
+          <td>57KB</td>
+        </tr>
+        <tr>
+          <td>dokument1.pdf</td>
+          <td>12-09-2023</td>
+          <td>57KB</td>
+        </tr>
+        <tr>
+          <td>dokument2.pdf</td>
+          <td>12-09-2023</td>
+          <td>57KB</td>
+        </tr>
+        <tr>
+          <td>obraz1.jpg</td>
+          <td>12-09-2023</td>
+          <td>57KB</td>
+        </tr>
+      </table>   
 
     </div>
 
     <script>
-        function wyszukiwanieF() {
-          var input, filter, table, tr, td, i, txtValue;
-          input = document.getElementById("search");
-          filter = input.value.toUpperCase();
-          table = document.getElementById("t_pliki");
-          tr = table.getElementsByTagName("tr");
-          for (i = 0; i < tr.length; i++) {
-            td = tr[i].getElementsByTagName("td")[0];
-            if (td) {
-              txtValue = td.textContent || td.innerText;
-              if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                tr[i].style.display = "";
-              } else {
-                tr[i].style.display = "none";
-              }
-            }       
-          }
+      function myFunction() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("myTable");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+          td = tr[i].getElementsByTagName("td")[0];
+          if (td) {
+            txtValue = td.textContent || td.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+              tr[i].style.display = "";
+            } else {
+              tr[i].style.display = "none";
+            }
+          }       
         }
-        </script>
+      }
+      </script>
 </body>
 
 </html>
