--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -13,8 +13,9 @@
     <div class="header">
         <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
         <h1>Klasy 5</h1>
-        <input type="text" id="search" onkeyup="wyszukiwanieF()" placeholder="Search for names.."
-            title="Type in a name"> <!-- wyszukiwarka -->
+
+        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"> <!-- wyszukiwarka -->
+
         <h2>~ng/klasy</h2>
     </div>
 
@@ -24,7 +25,7 @@
     </div>
 
     <div class="main">
-        <table class="wyb_postaci">
+        <table class="wyb_postaci" id="myTable">
             <tr>
                 <td onclick="window.location='rodzaj/5G.html';">5G</td>
                 <td onclick="window.location='rodzaj/5K.html';">5K</td>
@@ -32,6 +33,28 @@
             </tr>
         </table>
     </div>
+
+
+    <script>
+        function myFunction() {
+          var input, filter, table, tr, td, i, txtValue;
+          input = document.getElementById("myInput");
+          filter = input.value.toUpperCase();
+          table = document.getElementById("myTable");
+          tr = table.getElementsByTagName("tr");
+          for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName("td")[0];
+            if (td) {
+              txtValue = td.textContent || td.innerText;
+              if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                tr[i].style.display = "";
+              } else {
+                tr[i].style.display = "none";
+              }
+            }       
+          }
+        }
+        </script>
 
 </body>
 
