--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -2,63 +2,64 @@
 <html lang="pl-PL">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index of /~ng/klasy_5</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Index of /~ng/klasy_5</title>
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
 
-    <div class="header">
-        <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
-        <h1>Klasy 5</h1>
+  <div class="header">
+    <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
+    <h1>Klasy 5</h1>
 
-        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name"> <!-- wyszukiwarka -->
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+    <!-- wyszukiwarka -->
 
-        <h2>~ng/klasy</h2>
-    </div>
+    <h2>~ng/klasy</h2>
+  </div>
 
-    <div class="pasek">
-        <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
-                src="plan_button.png" alt="Plan"></a>
-    </div>
+  <div class="pasek">
+    <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
+        src="plan_button.png" alt="Plan"></a>
+  </div>
 
-    <div class="main">
-        <table class="wyb_postaci" id="myTable">
-            <tr>
-                <td onclick="window.location='rodzaj/5G.html';">5G</td>
-            </tr>
-            <tr>
-                <td onclick="window.location='rodzaj/5K.html';">5K</td>
-            </tr>
-            <tr>
-                <td onclick="window.location='rodzaj/5P.html';">5P</td>
-            </tr>
-        </table>
-    </div>
+  <div class="main">
+    <table class="wyb_postaci" id="myTable">
+      <tr>
+        <td onclick="window.location='rodzaj/5G.html';">5G</td>
+      </tr>
+      <tr>
+        <td onclick="window.location='rodzaj/5K.html';">5K</td>
+      </tr>
+      <tr>
+        <td onclick="window.location='rodzaj/5P.html';">5P</td>
+      </tr>
+    </table>
+  </div>
 
 
-    <script>
-        function myFunction() {
-          var input, filter, table, tr, td, i, txtValue;
-          input = document.getElementById("myInput");
-          filter = input.value.toUpperCase();
-          table = document.getElementById("myTable");
-          tr = table.getElementsByTagName("tr");
-          for (i = 0; i < tr.length; i++) {
-            td = tr[i].getElementsByTagName("td")[0];
-            if (td) {
-              txtValue = td.textContent || td.innerText;
-              if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                tr[i].style.display = "";
-              } else {
-                tr[i].style.display = "none";
-              }
-            }       
+  <script>
+    function myFunction() {
+      var input, filter, table, tr, td, i, txtValue;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      table = document.getElementById("myTable");
+      tr = table.getElementsByTagName("tr");
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[0];
+        if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+          } else {
+            tr[i].style.display = "none";
           }
         }
-        </script>
+      }
+    }
+  </script>
 
 </body>
 
