--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -14,7 +14,7 @@
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
     <h1>Klasy 5</h1>
 
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+    <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
 
     <h2>~ng/klasy</h2>
@@ -43,7 +43,7 @@
   <script>
     function myFunction() {
       var input, filter, table, tr, td, i, txtValue;
-      input = document.getElementById("myInput");
+      input = document.getElementById("search");
       filter = input.value.toUpperCase();
       table = document.getElementById("myTable");
       tr = table.getElementsByTagName("tr");
