--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -2,35 +2,43 @@
 <html lang="pl-PL">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index of /~ng/klasy_4</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Index of /~ng/klasy_4</title>
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <script src="../script/main.js"></script>
 </head>
 
 <body>
-    <div class="header">
-        <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
-        <h1>Klasy 4</h1>
-        <input type="text" id="search" onkeyup="wyszukiwanieF()" placeholder="Search for names.."
-            title="Type in a name"> <!-- wyszukiwarka -->
-        <h2>~ng/klasy</h2>
-    </div>
 
-    <div class="pasek">
-        <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
-                src="plan_button.png" alt="Plan"></a>
-    </div>
+  <div class="header">
+    <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
+    <h1>Klasy 4</h1>
 
-    <div class="main">
-        <table class="wyb_postaci">
-            <tr>
-                <td onclick="window.location='rodzaj/4G.html';">4G</td>
-                <td onclick="window.location='rodzaj/4G.html';">4K</td>
-                <td onclick="window.location='rodzaj/4G.html';">4P</td>
-            </tr>
-        </table>
-    </div>
+    <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+    <!-- wyszukiwarka -->
+
+    <h2>/~ng/klasy_4</h2>
+  </div>
+
+  <div class="pasek">
+    <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
+        src="plan_button.png" alt="Plan"></a>
+  </div>
+
+  <div class="main">
+    <table class="wyb_postaci" id="myTable">
+      <tr>
+        <td onclick="window.location='rodzaj/4G.html';">4G</td>
+      </tr>
+      <tr>
+        <td onclick="window.location='rodzaj/4K.html';">4K</td>
+      </tr>
+      <tr>
+        <td onclick="window.location='rodzaj/4P.html';">4P</td>
+      </tr>
+    </table>
+  </div>
 
 </body>
 
