--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Index of /~ng/klasy_5</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <script src="../script/main.js"></script>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
 
-    <h2>~ng/klasy</h2>
+    <h2>/~ng/klasy_5</h2>
   </div>
 
   <div class="pasek">
@@ -38,28 +39,6 @@
       </tr>
     </table>
   </div>
-
-
-  <script>
-    function myFunction() {
-      var input, filter, table, tr, td, i, txtValue;
-      input = document.getElementById("search");
-      filter = input.value.toUpperCase();
-      table = document.getElementById("myTable");
-      tr = table.getElementsByTagName("tr");
-      for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[0];
-        if (td) {
-          txtValue = td.textContent || td.innerText;
-          if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            tr[i].style.display = "";
-          } else {
-            tr[i].style.display = "none";
-          }
-        }
-      }
-    }
-  </script>
 
 </body>
 
