--- a/klasy/rodzaj/3P.html
+++ b/klasy/rodzaj/3P.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index of /~ng/klasy_5/5G</title>
+  <title>Index of /~ng/klasy_3/3P</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <script src="../../script/main.js"></script>
 </head>
