--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -28,14 +28,14 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr>
-        <td onclick="window.location='rodzaj/5G.html';">5G</td>
+      <tr onclick="window.location='rodzaj/5G.html';">
+        <td>5G</td>
       </tr>
-      <tr>
-        <td onclick="window.location='rodzaj/5K.html';">5K</td>
+      <tr onclick="window.location='rodzaj/5K.html';">
+        <td>5K</td>
       </tr>
-      <tr>
-        <td onclick="window.location='rodzaj/5P.html';">5P</td>
+      <tr onclick="window.location='rodzaj/5P.html';">
+        <td>5P</td>
       </tr>
     </table>
   </div>
