--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -28,14 +28,14 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr>
-        <td onclick="window.location='rodzaj/3G.html';">3G</td>
+      <tr onclick="window.location='rodzaj/3G.html';">
+        <td>3G</td>
       </tr>
-      <tr>
-        <td onclick="window.location='rodzaj/3K.html';">3K</td>
+      <tr onclick="window.location='rodzaj/3K.html';">
+        <td>3K</td>
       </tr>
-      <tr>
-        <td onclick="window.location='rodzaj/3P.html';">3P</td>
+      <tr onclick="window.location='rodzaj/3P.html';">
+        <td>3P</td>
       </tr>
     </table>
   </div>
