--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -28,14 +28,14 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr>
-        <td onclick="window.location='rodzaj/4G.html';">4G</td>
+      <tr onclick="window.location='rodzaj/4G.html';">
+        <td>4G</td>
       </tr>
-      <tr>
-        <td onclick="window.location='rodzaj/4K.html';">4K</td>
+      <tr onclick="window.location='rodzaj/4K.html';">
+        <td>4K</td>
       </tr>
-      <tr>
-        <td onclick="window.location='rodzaj/4P.html';">4P</td>
+      <tr onclick="window.location='rodzaj/4P.html';">
+        <td>4P</td>
       </tr>
     </table>
   </div>
