--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
 
     <div class="header">
         <a href="/" title="Przejdź do strony szkoły"><img src="img/home.svg" alt="Home" id="home"></a>
+        <a href="/" title="Przejdź do planu lekcji"><img src="img/info.svg" alt="Info" id="info"></a>
         <h1>FTP Mikołaj Noga</h1>
         <h2>~ng/</h2>
-    </div>
-
-    <div class="pasek">
-        <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
-                src="plan_button.png" alt="Plan"></a>
     </div>
 
     <div class="main">
