--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -13,6 +13,7 @@
 
   <div class="header">
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
+    <a href="/" title="Przejdź do planu lekcji"><img src="img/info.svg" alt="Info" id="info"></a>
     <h1>Klasy 3</h1>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
@@ -21,10 +22,6 @@
     <h2>/~ng/klasy_3</h2>
   </div>
 
-  <div class="pasek">
-    <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
-        src="plan_button.png" alt="Plan"></a>
-  </div>
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
