--- a/klasy/rodzaj/3G.html
+++ b/klasy/rodzaj/3G.html
@@ -24,8 +24,8 @@
   <!-------------------------------------------->
   <div class="pasek">
 
-    <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img
-        src="plan_button.png" alt="Plan"></a>
+    <a target="_blank" href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"><img src="plan_button.png" alt="Plan"></a>
+    <a href="/" title="Przejdź do planu lekcji"><img src="img/info.svg" alt="Info" id="info"></a>
   </div>
   <!-------------------------------------------->
   <div class="main">
