--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -13,6 +13,7 @@
 
   <div class="header">
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
+    <a href="/" title="Przejdź do planu lekcji"><img src="img/info.svg" alt="Info" id="info"></a>
     <h1>Klasy 4</h1>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
