--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index of /~ng</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preload" as="image" href="img/home.svg">
+    <link rel="preload" as="image" href="img/home2.svg">
+    <link rel="preload" as="image" href="img/info.svg">
+    <link rel="preload" as="image" href="img/info2.svg">
 </head>
 
 <body>
