--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -7,13 +7,19 @@
   <title>Index of /~ng/klasy_5</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <script src="../script/main.js"></script>
+  <link rel="preload" as="image" href="../img/home.svg">
+  <link rel="preload" as="image" href="../img/home2.svg">
+  <link rel="preload" as="image" href="../img/info.svg">
+  <link rel="preload" as="image" href="../img/info2.svg">
 </head>
 
 <body>
 
   <div class="header">
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
-    <a href="/" title="Przejdź do planu lekcji"><img src="img/info.svg" alt="Info" id="info"></a>
+    <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
+      title="Przejdź do planu lekcji" target="_blank">
+      <img src="img/info.svg" alt="Info" id="info"></a>
     <h1>Klasy 5</h1>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
