--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -18,7 +18,7 @@
   <div class="header">
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
-      title="Przejdź do planu lekcji" target="_blank">
+      title="Przejdź do planu lekcji nauczyciela" target="_blank">
       <img src="img/info.svg" alt="Info" id="info"></a>
     <h1>Klasy 4</h1>
 
