--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -19,7 +19,7 @@
     <a href="../index.html" title="Przejdź do strony głównej"><img src="../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
       title="Przejdź do planu lekcji nauczyciela" target="_blank">
-      <img src="img/info.svg" alt="Info" id="info"></a>
+      <img src="../img/info.svg" alt="Info" id="info"></a>
     <h1>Klasy 3</h1>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
