--- a/klasy/rodzaj/4P.html
+++ b/klasy/rodzaj/4P.html
@@ -11,22 +11,18 @@
 
 <body>
 
-  <div class="przycisk">
-    <a href="../klasa4.html"><img src="home_button.png" alt="Home"></a>
-  </div>
-  <!-------------------------------------------->
-
   <div class="header">
+
+    <a href="../klasa4.html"><img src="home_button.png" alt="Home"></a>
+    
+    <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
+    title="Przejdź do planu lekcji nauczyciela" target="_blank">
+    <img src="img/info.svg" alt="Info" id="info"></a>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
   </div>
-  <!-------------------------------------------->
-  <div class="pasek">
-
-    <a href="../klasy4.html" title="Przejdź do strony wyżej"><img src="img/home.svg" alt="Home" id="home"></a>
-    <a href="/" title="Przejdź do planu lekcji"><img src="img/info.svg" alt="Info" id="info"></a>
-  </div>
+  
   <!-------------------------------------------->
   <div class="main">
 
