--- a/klasy/rodzaj/5P.html
+++ b/klasy/rodzaj/5P.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index of /~ng/klasy_5/5G</title>
+  <title>Index of /~ng/klasy_5/5p</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link rel="preload" as="image" href="../../img/home.svg">
   <link rel="preload" as="image" href="../../img/home2.svg">
@@ -16,15 +16,16 @@
 <body>
 
   <div class="header">
-
-    <a href="../klasa5.html"><img src="home_button.png" alt="Home"></a>
-    
+    <a href="../index.html" title="Przejdź do strony głównej"><img src="../../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
-    title="Przejdź do planu lekcji nauczyciela" target="_blank">
-    <img src="img/info.svg" alt="Info" id="info"></a>
+      title="Przejdź do planu lekcji nauczyciela" target="_blank">
+      <img src="../../img/info.svg" alt="Info" id="info"></a>
+    <h1>5P</h1>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
+
+    <h2>/~ng/klasy_5/5p</h2>
   </div>
 
   <!-------------------------------------------->
