--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 
-<<head>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Index of /~ng/klasy_5/5g</title>
