--- a/klasy/rodzaj/3P.html
+++ b/klasy/rodzaj/3P.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Index of /~ng/klasy_3/3P</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link rel="preload" as="image" href="../../img/home.svg">
+  <link rel="preload" as="image" href="../../img/home2.svg">
+  <link rel="preload" as="image" href="../../img/info.svg">
+  <link rel="preload" as="image" href="../../img/info2.svg">
   <script src="../../script/main.js"></script>
 </head>
 
@@ -14,11 +18,10 @@
  
   <div class="header">
 
-    <a href="../klasa3.html"><img src="home_button.png" alt="Home"></a>
-    
+    <a href="../klasa3.html" title="Przejdź do strony głównej"><img src="../../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
-    title="Przejdź do planu lekcji nauczyciela" target="_blank">
-    <img src="img/info.svg" alt="Info" id="info"></a>
+      title="Przejdź do planu lekcji nauczyciela" target="_blank">
+      <img src="../../img/info.svg" alt="Info" id="info"></a>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
