--- a/klasy/rodzaj/3P.html
+++ b/klasy/rodzaj/3P.html
@@ -25,6 +25,8 @@
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
+
+    <h2>/~ng/klasy_3/3p</h2>
   </div>
 
   <!-------------------------------------------->
