--- a/klasy/rodzaj/4G.html
+++ b/klasy/rodzaj/4G.html
@@ -24,6 +24,8 @@
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <!-- wyszukiwarka -->
+
+    <h2>/~ng/klasy_4/4g</h2>
   </div>
 
   <!-------------------------------------------->
