--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -31,42 +31,24 @@
   <!-------------------------------------------->
   <div class="main">
 
-    <table id="myTable">
-      <tr class="header">
-        <th>Nazwa</th>
-        <th>Data modyfikacji</th>
-        <th>Wielkość pliku</th>
-      </tr>
-      <tr>
-        <td>plik1.txt</td>
-        <td>12-09-2023</td>
-        <td>57KB</td>
-      </tr>
-      <tr>
-        <td>plik2.txt</td>
-        <td>12-09-2023</td>
-        <td>57KB</td>
-      </tr>
-      <tr>
-        <td>plik3.txt</td>
-        <td>12-09-2023</td>
-        <td>57KB</td>
-      </tr>
-      <tr>
-        <td>dokument1.pdf</td>
-        <td>12-09-2023</td>
-        <td>57KB</td>
-      </tr>
-      <tr>
-        <td>dokument2.pdf</td>
-        <td>12-09-2023</td>
-        <td>57KB</td>
-      </tr>
-      <tr>
-        <td>obraz1.jpg</td>
-        <td>12-09-2023</td>
-        <td>57KB</td>
-      </tr>
+    <table id="myTable" class="tabela">
+      <thead>
+        <tr class="indexhead">
+          <th class="indexcolname"><a href="https://ftp.insert.com.pl/?C=N;O=D">Name</a></th>
+          <th class="indexcollastmod"><a href="https://ftp.insert.com.pl/?C=M;O=A">Last modified</a></th>
+          <th class="indexcolsize"><a href="https://ftp.insert.com.pl/?C=S;O=A">Size</a></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="">
+          <td class="indexcolname">
+            <div class="img-wrap"><img src="../../img/file-directory.svg" alt="[DIR]"
+                width="16" height="16"></div><a href="https://ftp.insert.com.pl/pub/">pub/</a>
+          </td>
+          <td class="indexcollastmod">2007-05-15 10:24 </td>
+          <td class="indexcolsize"> - </td>
+        </tr>
+      </tbody>
     </table>
 
   </div>
