--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -43,7 +43,7 @@
         <tr class="">
           <td class="indexcolname">
             <div class="img-wrap"><img src="../../img/file-directory.svg" alt="[DIR]"
-                width="16" height="16"></div><a href="https://ftp.insert.com.pl/pub/">pub/</a>
+                width="16" height="16"></div><a href="../../pliki/5G/">pliki/</a>
           </td>
           <td class="indexcollastmod">2007-05-15 10:24 </td>
           <td class="indexcolsize"> - </td>
