--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -10,7 +10,6 @@
   <link rel="preload" as="image" href="../../img/home2.svg">
   <link rel="preload" as="image" href="../../img/info.svg">
   <link rel="preload" as="image" href="../../img/info2.svg">
-  <script src="../../script/main.js"></script>
 </head>
 
 <body>
@@ -43,16 +42,16 @@
         <tr class="">
           <td class="indexcolname">
             <div class="img-wrap"><img src="../../img/file-directory.svg" alt="[DIR]"
-                width="16" height="16"></div><a href="../../pliki/5G/">pliki/</a>
+                width="16" height="16"></div><a href="../../pliki/5G/">5G</a>
           </td>
-          <td class="indexcollastmod">2007-05-15 10:24 </td>
-          <td class="indexcolsize"> - </td>
+          <td class="indexcollastmod"></td>
+          <td class="indexcolsize"></td>
         </tr>
       </tbody>
     </table>
 
   </div>
-
+  <script src="../../script/main.js"></script>
 </body>
 
 </html>
