--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index of /~ng/klasy_5/5g</title>
+  <title></title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link rel="preload" as="image" href="../../img/home.svg">
   <link rel="preload" as="image" href="../../img/home2.svg">
@@ -19,7 +19,7 @@
 
 <body>
 
-  <div id="header">
+  <!-- <div id="header">
     <a href="../klasa5.html" title="Przejdź do strony głównej"><img src="../../img/home.svg" alt="Home" id="home"></a>
     <a href="https://zse.edu.gdansk.pl/Content/pub/458/Plan_lekcji/plan2018/plany/n62.html"
       title="Przejdź do planu lekcji nauczyciela" target="_blank">
@@ -27,10 +27,10 @@
     <h1>5G</h1>
 
     <input type="text" id="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
-    <!-- wyszukiwarka -->
+  <!-- wyszukiwarka -->
 
-    <h2>/~ng/klasy_5/5g</h2>
-  </div>
+  <!-- <h2>/~ng/klasy_5/5g</h2>
+  </div>--> 
 
   <!-------------------------------------------->
   <table id="indexlist">
