--- a/pliki/test.html
+++ b/pliki/test.html
@@ -10,7 +10,7 @@
     <ul id="fileList"></ul>
 
     <script>
-        const directoryPath = "/5G/"; // Wprowadź ścieżkę do swojego katalogu
+        const directoryPath = "./"; // Wprowadź ścieżkę do swojego katalogu
 
         // Funkcja generująca listę plików
         const generateFileList = (files) => {
