--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Index of /~ng/klasy_5/5G</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link rel="preload" as="image" href="../../img/home.svg">
   <link rel="preload" as="image" href="../../img/home2.svg">
