--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -32,7 +32,7 @@
         <hr />
       </th>
     </tr>
-    <tr class="even">
+    <!--<tr class="even">
       <td class="indexcolicon">
         <img src="../../img/file-directory.svg" alt="[DIR]" width="16" height="16"/>
       </td>
@@ -45,7 +45,7 @@
       <th colspan="5">
         <hr/>
       </th>
-    </tr>
+    </tr>-->
   </table>
   <script src="../../script/main.js"></script>
 </body>
