--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -48,6 +48,7 @@
     </tr>-->
   </table>
   <script src="../../script/main.js"></script>
+  <script src="../../script/tabela.js"></script>
 </body>
 
 </html>
