--- a/klasy/rodzaj/5G.html
+++ b/klasy/rodzaj/5G.html
@@ -32,20 +32,22 @@
         <hr />
       </th>
     </tr>
-    <!--<tr class="even">
-      <td class="indexcolicon">
-        <img src="../../img/file-directory.svg" alt="[DIR]" width="16" height="16"/>
-      </td>
-      <td class="indexcolname"><a href="../../pliki/5G/">5G/</a></td>
-      <td class="indexcollastmod">2007-05-15 10:24 </td>
-      <td class="indexcolsize"> - </td>
-      <td class="indexcoldesc">&nbsp;</td>
-    </tr>
-    <tr class="indexbreakrow">
-      <th colspan="5">
-        <hr/>
-      </th>
-    </tr>-->
+    <tbody>
+      <!--<tr class="even">
+        <td class="indexcolicon">
+          <img src="../../img/file-directory.svg" alt="[DIR]" width="16" height="16"/>
+        </td>
+        <td class="indexcolname"><a href="../../pliki/5G/">5G/</a></td>
+        <td class="indexcollastmod">2007-05-15 10:24 </td>
+        <td class="indexcolsize"> - </td>
+        <td class="indexcoldesc">&nbsp;</td>
+      </tr>
+      <tr class="indexbreakrow">
+        <th colspan="5">
+          <hr/>
+        </th>
+      </tr>-->
+    </tbody>
   </table>
   <script src="../../script/main.js"></script>
 </body>
