test_wlasciwej_podstrony

--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -30,7 +30,7 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr onclick="window.location='rodzaj/3G.html';">
+      <tr onclick="window.location='rodzaj/podstrona.html';">
         <td>3G</td>
       </tr>
       <tr onclick="window.location='rodzaj/3K.html';">
