--- a/klasy/klasa5.html
+++ b/klasy/klasa5.html
@@ -30,13 +30,13 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr onclick="window.location='rodzaj/5G.html';">
+      <tr onclick="window.location='../pliki/5G/';">
         <td>5G</td>
       </tr>
-      <tr onclick="window.location='rodzaj/5K.html';">
+      <tr onclick="window.location='../pliki/5K/';">
         <td>5K</td>
       </tr>
-      <tr onclick="window.location='rodzaj/5P.html';">
+      <tr onclick="window.location='../pliki/5P';">
         <td>5P</td>
       </tr>
     </table>
