--- a/klasy/rodzaj/podstrona.html
+++ b/klasy/rodzaj/podstrona.html
@@ -29,7 +29,7 @@
     </tr>
     <tr class="indexbreakrow">
       <th colspan="5">
-        <hr />
+        <hr/>
       </th>
     </tr>
     <tbody>
@@ -37,11 +37,21 @@
         <td class="indexcolicon">
           <img src="../../img/file-directory.svg" alt="[DIR]" width="16" height="16"/>
         </td>
-        <td class="indexcolname"><a href="../../pliki/5G/">5G/</a></td>
+        <td class="indexcolname"><a href="">test.txt</a></td>
         <td class="indexcollastmod">2007-05-15 10:24 </td>
         <td class="indexcolsize"> - </td>
         <td class="indexcoldesc">&nbsp;</td>
       </tr>
+      <tr class="uneven">
+        <td class="indexcolicon">
+          <img src="../../img/file-directory.svg" alt="[DIR]" width="16" height="16"/>
+        </td>
+        <td class="indexcolname"><a href="">dokument.pdf</a></td>
+        <td class="indexcollastmod">2007-05-15 10:24 </td>
+        <td class="indexcolsize"> - </td>
+        <td class="indexcoldesc">&nbsp;</td>
+      </tr>
+
       <tr class="indexbreakrow">
         <th colspan="5">
           <hr/>
